--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular2-tinymce",
   "version": "2.1.1",
-  "description": "Angular component for TinyMCE MCE WYSIWYG editor",
+  "description": "Angular component for TinyMCE MCE WYSIWYG editor , this is a copy with personal changes from Ledzz angular2-tinymce cause I needed ASAP this changes. I'll request the changes at his package and deprecate this one. Please use the original at https://github.com/Ledzz/angular2-tinymce/",
   "scripts": {
     "build": "ngc -p ./tsconfig.json && tsc -p ./tsconfig.json",
     "prebuild": "rimraf ./dist ./compiled && mkdir dist"
@@ -20,10 +20,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Ledzz/angular2-tinymce.git"
+    "url": "https://github.com/FabricioK/angular2-tinymce.git"
   },
   "bugs": {
-    "web": "https://github.com/Ledzz/angular2-tinymce/issues"
+    "web": "https://github.com/FabricioK/angular2-tinymce/issues"
   },
   "author": "Ledzz",
   "license": "ISC",
