--- a/package.json
+++ b/package.json
@@ -35,12 +35,23 @@
     "@angular/forms": "^4.0.1",
     "@angular/platform-browser": "^4.0.1",
     "@angular/platform-server": "^4.0.1",
+    "@types/jasmine": "^2.6.0",
+    "@types/node": "~6.0.46",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-jasmine": "^2.4.2",
+    "gulp-typescript": "^3.1.3",
+    "jasmine": "^2.8.0",
+    "merge2": "^1.0.2",
     "rimraf": "^2.6.1",
+    "run-sequence": "^1.2.2",
     "rxjs": "^5.2.0",
-    "typescript": "^2.2.2",
+    "standard-version": "^3.0.0",
+    "tinymce": "^4.5.6",
+    "typescript": "^2.5.3",
     "zone.js": "^0.8.5"
   },
-  "typings": "dist/index.d.ts",
+  "typings": "definitions/index.d.ts",
   "dependencies": {
     "tinymce": "^4.5.6"
   }
